feat: implement comprehensive meta tags and fix footer component

--- a/index.html
+++ b/index.html
@@ -5,32 +5,66 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>GhostBPA – Silent Systems</title>
   
+  <!-- Resource Hints -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://ghostbpa.com" crossorigin>
+  <link rel="dns-prefetch" href="https://ghostbpa.com">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" as="style">
+  <link rel="preload" href="/assets/images/responsive/head2-optimized-small.webp" as="image" type="image/webp">
+  <link rel="preload" href="/assets/images/responsive/GhostBPA-social-preview-wide-1200.png" as="image" type="image/png">
+  
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg">
+  <link rel="apple-touch-icon" href="/assets/images/favicon.svg">
+  <link rel="manifest" href="/site.webmanifest">
   
   <!-- Primary Meta Tags -->
   <meta name="title" content="GhostBPA – Silent Systems">
-  <meta name="description" content="Business process automation for SMBs">
+  <meta name="description" content="Business process automation for SMBs. We build modular microservices that quietly handle repetitive tasks, freeing your team to focus on work only humans can do.">
+  <meta name="keywords" content="business process automation, microservices, SMB automation, workflow automation, process optimization">
+  <meta name="author" content="GhostBPA">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
+  <meta name="revisit-after" content="7 days">
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://ghostbpa.com/">
   <meta property="og:title" content="GhostBPA – Silent Systems">
-  <meta property="og:description" content="Business process automation for SMBs">
-  <meta property="og:image" content="https://ghostbpa.com/assets/images/GhostBPA-social-preview-wide.png">
+  <meta property="og:description" content="Business process automation for SMBs. We build modular microservices that quietly handle repetitive tasks, freeing your team to focus on work only humans can do.">
+  <meta property="og:image" content="https://ghostbpa.com/assets/images/responsive/GhostBPA-social-preview-wide-1200.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="GhostBPA - Your AI-Powered Business Process Automation Partner">
+  <meta property="og:site_name" content="GhostBPA">
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://ghostbpa.com/">
   <meta property="twitter:title" content="GhostBPA – Silent Systems">
-  <meta property="twitter:description" content="Business process automation for SMBs">
-  <meta property="twitter:image" content="https://ghostbpa.com/assets/images/GhostBPA-social-preview-wide.png">
+  <meta property="twitter:description" content="Business process automation for SMBs. We build modular microservices that quietly handle repetitive tasks, freeing your team to focus on work only humans can do.">
+  <meta property="twitter:image" content="https://ghostbpa.com/assets/images/responsive/GhostBPA-social-preview-wide-1200.png">
+  <meta property="twitter:image:alt" content="GhostBPA - Your AI-Powered Business Process Automation Partner">
   
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
+  <!-- Additional Meta Tags -->
+  <meta name="theme-color" content="#2E3BFF">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="GhostBPA">
+  
+  <!-- Security Headers -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.google.com https://www.gstatic.com https://cdn.tailwindcss.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https:; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://formspree.io; frame-src 'self' https://www.google.com;">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+  <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+  <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+  
+  <script src="https://cdn.tailwindcss.com" defer></script>
+  <script defer>
     tailwind.config = {
             theme: {
               extend: {
@@ -1133,15 +1167,21 @@
   </script>
 
   <!-- Include the header and footer components -->
-  <script src="/components/header.js"></script>
-  <script src="/components/footer.js"></script>
-  <script>
-    // Initialize the header and footer
-    window.initHeader();
-    window.initFooter();
+  <script src="components/header.js" defer></script>
+  <script src="components/footer.js" defer></script>
+  <script defer>
+    // Initialize the header and footer after DOM is loaded
+    document.addEventListener('DOMContentLoaded', function() {
+      if (typeof window.initHeader === 'function') {
+        window.initHeader();
+      }
+      if (typeof window.initFooter === 'function') {
+        window.initFooter();
+      }
+    });
   </script>
 
-  <script>
+  <script defer>
     // Minimal form handling
     document.getElementById('contactForm').addEventListener('submit', async function(e) {
       e.preventDefault();
@@ -1161,7 +1201,7 @@
     });
   </script>
 
-  <script>
+  <script defer>
     // Hours Counter
     function formatNumber(num) {
       // Split number into whole and decimal parts
@@ -1208,7 +1248,7 @@
     </div>
   </div>
 
-  <script>
+  <script defer>
     // Add mobile sticky CTA functionality
     window.addEventListener('scroll', function() {
       const stickyCTA = document.querySelector('.md\\:hidden.fixed');
