fix: update CSP to allow Font Awesome CDN

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <link rel="preload" href="/assets/images/responsive/head2-optimized-small.webp" as="image" type="image/webp" fetchpriority="high">
   <link rel="preload" href="/assets/images/responsive/GhostBPA-social-preview-wide-1200.png" as="image" type="image/png">
   
+  <!-- Font Awesome -->
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg">
   <link rel="apple-touch-icon" href="/assets/images/favicon.svg">
@@ -57,7 +61,7 @@
   <meta name="apple-mobile-web-app-title" content="GhostBPA">
   
   <!-- Security Headers -->
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.google.com https://www.gstatic.com https://cdn.tailwindcss.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https:; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://formspree.io; frame-src 'self' https://www.google.com;">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.google.com https://www.gstatic.com https://cdn.tailwindcss.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https:; connect-src 'self' https://formspree.io; frame-src 'self' https://www.google.com;">
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
   <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
   <meta http-equiv="X-XSS-Protection" content="1; mode=block">
@@ -836,56 +840,56 @@
             </div>
             <div class="grid md:grid-cols-2 gap-x-12 gap-y-4">
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="fas fa-envelope text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">ActiveCampaign</span>
                   <span class="text-sm text-white/50 ml-2">Email Marketing</span>
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="fab fa-linkedin text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">LinkedIn</span>
                   <span class="text-sm text-white/50 ml-2">Professional Network</span>
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="fas fa-project-diagram text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">Pipedrive</span>
                   <span class="text-sm text-white/50 ml-2">Sales Pipeline</span>
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="fas fa-cloud text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">Salesforce</span>
                   <span class="text-sm text-white/50 ml-2">Enterprise CRM</span>
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="fas fa-cube text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">SugarCRM</span>
                   <span class="text-sm text-white/50 ml-2">Customizable CRM</span>
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="fab fa-wordpress text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">WooCommerce</span>
                   <span class="text-sm text-white/50 ml-2">E-commerce Platform</span>
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="fab fa-wordpress text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">WordPress</span>
                   <span class="text-sm text-white/50 ml-2">Content Management</span>
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="fas fa-cogs text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">Zoho CRM</span>
                   <span class="text-sm text-white/50 ml-2">All-in-One CRM</span>
@@ -913,63 +917,63 @@
             </div>
             <div class="grid md:grid-cols-2 gap-x-12 gap-y-4">
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="fas fa-table text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">Airtable</span>
                   <span class="text-sm text-white/50 ml-2">Database Management</span>
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="fas fa-tasks text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">Asana</span>
                   <span class="text-sm text-white/50 ml-2">Project Management</span>
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="far fa-calendar-alt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">Cal.com</span>
                   <span class="text-sm text-white/50 ml-2">Meeting Scheduling</span>
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="far fa-calendar-check text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">Calendly</span>
                   <span class="text-sm text-white/50 ml-2">Appointment Booking</span>
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="far fa-file-alt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">Google Docs</span>
                   <span class="text-sm text-white/50 ml-2">Document Creation</span>
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="fas fa-table text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">Google Sheets</span>
                   <span class="text-sm text-white/50 ml-2">Spreadsheet Management</span>
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="fas fa-book text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">Notion</span>
                   <span class="text-sm text-white/50 ml-2">Knowledge Management</span>
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="fas fa-calculator text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">QuickBooks Online</span>
                   <span class="text-sm text-white/50 ml-2">Accounting Software</span>
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="fas fa-headset text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">Zendesk</span>
                   <span class="text-sm text-white/50 ml-2">Customer Support</span>
@@ -1011,42 +1015,42 @@
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="fas fa-cloud text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">Digital Ocean + AWS</span>
                   <span class="text-sm text-white/50 ml-2">Managed Hosting</span>
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="fab fa-js text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">JavaScript</span>
                   <span class="text-sm text-white/50 ml-2">Frontend & Backend</span>
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="fas fa-cogs text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">Make.com</span>
                   <span class="text-sm text-white/50 ml-2">Workflow Automation</span>
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="fab fa-python text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">Python</span>
                   <span class="text-sm text-white/50 ml-2">Data Processing</span>
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="fas fa-train text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">Railway</span>
                   <span class="text-sm text-white/50 ml-2">Cloud Deployment</span>
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <i class="fas fa-bolt text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
+                <i class="fas fa-code text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">VS Code</span>
                   <span class="text-sm text-white/50 ml-2">Code Editor</span>
