fix: restore tech stack background image and remove Make.com

--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
           <div class="absolute inset-0 bg-black/60 z-10"></div>
           
           <!-- Background image -->
-          <picture class="hero-image">
+          <picture class="absolute inset-0 w-full h-full">
             <source
               srcset="/assets/images/responsive/head2-optimized-320.webp 320w,
                       /assets/images/responsive/head2-optimized-640.webp 640w,
@@ -806,7 +806,7 @@
               width="1280"
               height="720"
               fetchpriority="high"
-              class="hero-bg-image"
+              class="w-full h-full object-cover"
             >
           </picture>
         </div>
@@ -1026,13 +1026,6 @@
                 <div>
                   <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">JavaScript</span>
                   <span class="text-sm text-white/50 ml-2">Frontend & Backend</span>
-                </div>
-              </div>
-              <div class="flex items-center gap-3">
-                <i class="fas fa-cogs text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]"></i>
-                <div>
-                  <span class="text-lg text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF]">Make.com</span>
-                  <span class="text-sm text-white/50 ml-2">Workflow Automation</span>
                 </div>
               </div>
               <div class="flex items-center gap-3">
